<resources>
    <string name="app_name">WeatherApp</string>
    <string name="SignIn_A_01">Đăng nhập bằng Google</string>
    <string name="SignIn_A_02">Đăng xuất</string>
    <string name="Splash_A_01">Weather Matters,\n We\'ve Got the Details</string>
    <string name="DesignBy_A_01">Design By</string>
    <string name="DesignBy_A_02">Glucozo</string>
    <string name="Main_A_01">°C</string>
    <string name="Main_A_02">Dộ ẩm</string>
    <string name="Main_A_03">Tốc độ gió</string>
    <string name="Main_A_04">Điều kiện</string>
    <string name="Main_A_05">Bình minh</string>
    <string name="Main_A_06">Hoàng hôn</string>
    <string name="Main_A_07">Biển</string>
    <string name="Main_A_08">%</string>
    <string name="Main_A_09">hPa</string>
    <string name="Main_A_10">m/s</string>
    <string name="Main_A_11">Biển</string>
    <string name="Main_A_12">Nhiệt độ cao nhất</string>
    <string name="Main_A_13">Nhiệt độ thấp nhất</string>
    <string name="Main_A_14">Hôm nay</string>
</resources>