<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_sun_main"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/search_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:searchIcon="@drawable/icon_search" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_location"
        app:layout_constraintStart_toEndOf="@id/img_location"
        app:layout_constraintTop_toTopOf="@id/img_location" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_location"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_A_14"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lottieAnimationView"
        app:layout_constraintTop_toTopOf="@id/lottieAnimationView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="31"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_day" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_A_01"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_temperature"
        app:layout_constraintTop_toTopOf="@id/tv_temperature" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_temperature_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Max :23.22 "
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_temperature_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Min :23.22 "
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_temperature_max"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature_max" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_weekdays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Tuesday"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature_min" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="20/09/2004"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weekdays" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_shape_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:background="@drawable/bg_shape_main"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_a" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Main_A_02" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Main_A_02"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:background="@drawable/bg_shape_main"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_wind_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_a" />

                <TextView
                    android:id="@+id/tv_wind_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Main_A_03"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:background="@drawable/bg_shape_main"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_a" />

                <TextView
                    android:id="@+id/tv_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Main_A_04"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:background="@drawable/bg_shape_main"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_a" />

                <TextView
                    android:id="@+id/tv_sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Main_A_05"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:background="@drawable/bg_shape_main"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_a" />

                <TextView
                    android:id="@+id/tv_sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Main_A_06"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:background="@drawable/bg_shape_main"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_sea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_a" />

                <TextView
                    android:id="@+id/tv_sea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Main_A_07"
                    android:textSize="10sp" />


            </LinearLayout>

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3,linearLayout7,linearLayout8,linearLayout9"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <include
        layout="@layout/layout_design_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>